# rescue-prime-webgpu-shootout

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
my-crate/: Cargo.toml
my-crate/src/: lib.rs
my-crate/src/merkle/: bench_gen.rs  cpu.rs  mod.rs
my-crate/src/merkle/webgpu/: helper.rs  merkle.rs  mod.rs  shader.wgsl
src/: index.ts
